--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <div class="player">
-            <video id="video" poster="./images/poster.jpg"  src="./videos/lofi.mp4" width="400"></video>
+            <video id="video"  src="https://static.videezy.com/system/resources/previews/000/012/979/original/record_player_011.mp4" width="400"></video>
             <div class="player-overlay">
                 <div class="player-actions">
                     <h2 class="player-title">Musica para programar</h2>
